<resources>
    <string name="app_name">Gym Partner</string>
    <string name="EMAIL">E-mail</string>
    <string name="PASSWORD">Password</string>
    <string name="LOGIN">Login</string>
    <string name="LOGOUT">Logout</string>
    <string name="CREATE_USER">Create User</string>
    <string name="REGISTER">Register</string>
    <string name="APP_NAME">GYM PARTNER</string>
    <string name="FORGOT_PASSWORD">Forgot Password?</string>
    <string name="LOGO_DESCRIPTION">Arm with heart tattoo logo</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="FORGOT_PASSWORD_MESSAGE">Please enter your e-mail to reset your password.</string>
    <string name="RESET_PASSWORD">Reset Password</string>
    <string name="NAME">Enter your full name</string>
    <string name="PHONE_NUMBER">Enter your phone number (just numbers)</string>
    <string name="AGE">Enter your age (just numbers)</string>
    <string name="PROFILE">PROFILE</string>
    <string name="HOME">HOME</string>
    <string name="SAVE">SAVE</string>
    <string name="MATCHES">MATCHES</string>
    <string name="Male">Male</string>
    <string name="Female">Female</string>
    <string name="desc">Add User Icon</string>
    <string name="gender_prompt">Enter your gender</string>
    <string name="uploadBtn">Upload Profile Picture</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="name_profile_text">Name:</string>
    <string name="number_profile_text">Contact:</string>
    <string name="age_profile_text">Age:</string>
    <string name="gender_profile_text">Gender:</string>
    <string name="profile_text_field_1">Search for Your Gym:</string>
    <string name="profile_text_field_2">Experience Level:</string>
    <string name="profile_text_field_3">Flexibility Training:</string>
    <string name="profile_text_field_4">Dynamic Strength Training:</string>
    <string name="profile_text_field_5">Static Strength Training:</string>
    <string name="profile_text_field_6">Aerobic Training:</string>
    <string name="profile_text_field_7">Circuit Training:</string>
    <string name="profile_text_field_8">Workout Schedule:</string>
    <string-array name="genders">
        <item>Male</item>
        <item>Female</item>
        <item>Non-Binary</item>
        <item>Other</item>
    </string-array>
    <string name="GOOGLE_MAPS_API_KEY">AIzaSyC0JdkZgycpPj4KLTAAKMjBrQ-XAxr4ZOw</string>






    <string name="Monday">Mon.</string>
    <string name="Tuesday">Tue.</string>
    <string name="Wednesday">Wed.</string>
    <string name="Thursday">Thu.</string>
    <string name="Friday">Fri.</string>
    <string name="Saturday">Sat.</string>
    <string name="Sunday">Sun.</string>




    <string name="title">Select your Availability:</string>


</resources>
