<?xml version="1.0" encoding="utf-8"?>
<android.widget.LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:orientation="vertical"
    android:paddingLeft="24dp"
    android:paddingRight="24dp"
    android:paddingTop="8dp"
    tools:context="com.example.janmatthewmiranda.testlogin.LoginActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/LOGO_DESCRIPTION"
        app:srcCompat="@drawable/arm" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="false"
        android:layout_gravity="center_horizontal"
        android:text="@string/APP_NAME"
        android:textAlignment="center"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/EMAIL"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/PASSWORD"
        android:inputType="textPassword" />

    <LinearLayout
        android:id="@+id/buttonBar"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/loginButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:background="@android:color/holo_blue_dark"
            android:text="@string/LOGIN"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/createButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:background="@android:color/holo_blue_dark"
            android:text="@string/CREATE_USER"
            android:textColor="@android:color/white" />

    </LinearLayout>

    <TextView
        android:id="@+id/forgetPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="34dp"
        android:text="@string/FORGOT_PASSWORD"
        android:textSize="18sp" />

</android.widget.LinearLayout>
