<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/overall"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    tools:context="com.example.janmatthewmiranda.testlogin.CreateProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/createIcon"
            android:layout_width="62dp"
            android:layout_height="85dp"
            android:layout_gravity="top|center"
            android:contentDescription="@string/desc"
            app:srcCompat="@drawable/create" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="Name:"
                android:textColor="@color/colorPrimary"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:layout_weight="3"
                android:hint="@string/NAME"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:singleLine="true"
                android:textAlignment="center"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="Contact:"
                android:textColor="@color/colorPrimary"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/phoneNumber"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:layout_weight="3"
                android:hint="@string/PHONE_NUMBER"
                android:inputType="phone"
                android:maxLines="1"
                android:singleLine="true"
                android:textAlignment="center"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="Age:"
                android:textColor="@color/colorPrimary"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/age"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:layout_weight="3"
                android:hint="@string/AGE"
                android:inputType="textNoSuggestions"
                android:maxLines="1"
                android:singleLine="true"
                android:textAlignment="center"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="Gender:"
                android:textColor="@color/colorPrimary"
                android:textSize="17sp" />
            <Spinner
                android:id="@+id/genderSpinner"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="3"
                android:entries="@array/genders"
                android:prompt="@string/gender_prompt" />


        </LinearLayout>

        <Button
            android:id="@+id/uploadBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="openGallery"
            android:text="@string/uploadBtn" />

        <ImageView
            android:id="@+id/seeImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="Profile Picture"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="Search for Your Gym:"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="17sp" />
        <!--TODO-->
        <!--Insert Something to Search-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="Experience Level:"
            android:textColor="@color/colorPrimary"
            android:textSize="17sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Flexibility Training:" />

            <SeekBar
                android:id="@+id/seekBar_1"
                style="@style/Widget.AppCompat.SeekBar.Discrete"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:max="10"
                android:progress="0" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Dynamic Strength Training:" />

            <SeekBar
                android:id="@+id/seekBar_2"
                style="@style/Widget.AppCompat.SeekBar.Discrete"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:max="10"
                android:progress="0" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Static Strength Training:" />

            <SeekBar
                android:id="@+id/seekBar_3"
                style="@style/Widget.AppCompat.SeekBar.Discrete"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:max="10"
                android:progress="0" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Aerobic Training:" />

            <SeekBar
                android:id="@+id/seekBar_4"
                style="@style/Widget.AppCompat.SeekBar.Discrete"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:max="10"
                android:progress="0" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Circuit Training:" />

            <SeekBar
                android:id="@+id/seekBar_5"
                style="@style/Widget.AppCompat.SeekBar.Discrete"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:max="10"
                android:progress="0" />


        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="Workout Schedule:"
            android:textColor="@color/colorPrimary"
            android:textSize="17sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Monday" />

            <io.apptik.widget.multiselectspinner.MultiSelectSpinner
                android:id="@+id/multiselectSpinnerMon"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Tuesday" />

            <io.apptik.widget.multiselectspinner.MultiSelectSpinner
                android:id="@+id/multiselectSpinnerTue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Wednesday" />

            <io.apptik.widget.multiselectspinner.MultiSelectSpinner
                android:id="@+id/multiselectSpinnerWed"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Thursday" />

            <io.apptik.widget.multiselectspinner.MultiSelectSpinner
                android:id="@+id/multiselectSpinnerThu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Friday" />

            <io.apptik.widget.multiselectspinner.MultiSelectSpinner
                android:id="@+id/multiselectSpinnerFri"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Saturday" />

            <io.apptik.widget.multiselectspinner.MultiSelectSpinner
                android:id="@+id/multiselectSpinnerSat"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Sunday" />

            <io.apptik.widget.multiselectspinner.MultiSelectSpinner
                android:id="@+id/multiselectSpinnerSun"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8" />
        </LinearLayout>


        <Button
            android:id="@+id/saveBtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginEnd="100dp"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="100dp"
            android:layout_marginStart="100dp"
            android:layout_weight="1"
            android:text="Save" />

        <Button
            android:id="@+id/logoutBTNF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="100dp"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="100dp"
            android:layout_marginStart="100dp"
            android:layout_weight="1"
            android:text="LOGOUT" />

    </LinearLayout>
</ScrollView>